# rocketseat_python_flask_api

./: .coverage  .gitignore  Desafio01.txt  Desafio02.txt  README.md  pyproject.toml  requirements.txt
sample/crud_tarefas/src/: app.py
sample/crud_tarefas/tests/unit/: test_crud_api.py  test_run_app.py
sample/sql_alchemy/src/: app.py  database.py
sample/sql_alchemy/src/databases/: database.db
sample/sql_alchemy/src/models/: user.py
sample/sql_alchemy/src/modules/: user_data_validator.py
sample/sql_alchemy/tests/unit/: conftest.py  test_create_user.py  test_database.py  test_delete_user.py  test_login_and_logout.py  test_read_user.py  test_sql_alchemy_api.py  test_sqlalchemy_run_app.py  test_update_user.py
sample/src/: app.py
sample/tests/unit/: test_crud_api.py  test_run_app.py
samples/aula_crud/: app.py
scripts/: build.sh  lint.sh
src/: app.py  desafio.txt  desafio_agenda.py
src/archive/: lista_contatos.json
src/models/: meal.py
src/modules/: menu.py  menu_enum.py  menu_functions.py  validation.py
src/routes/: meals.py
tests/unit/: conftest.py  test_delete_meal.py  test_get_meals.py  test_register_meal.py  test_run_app.py  test_update_meal.py
